--- a/apps/user-app/package.json
+++ b/apps/user-app/package.json
@@ -18,7 +18,9 @@
     "next-auth": "^4.24.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "recoil": "^0.7.7"
+    "react-hot-toast": "^2.4.1",
+    "recoil": "^0.7.7",
+    "swr": "^2.2.5"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^14.1.1",
